# sfs-api

./: .env.example  .gitignore  README.md  docker-compose.yml  idea.md  install.sh  main.py  pyproject.toml  worker.py
.gitea/workflows/: security.yml
.github/workflows/: e2e.yml  release.yml  security.yml  test.yml
.woodpecker/: security.yml  test.yml
conf/caddy/: Caddyfile  Caddyfile.example
data/qdrant/: raft_state.json
docker/: Dockerfile  Dockerfile.worker
src/cache/: __init__.py  cache_abs.py  file_cache.py  query_cache.py
src/clients/: __init__.py  minio_client.py  qdrant_client.py  redis_client.py
src/embeddings/: __init__.py  generator.py  model.py
src/indexer/: __init__.py  chunker.py  file_reader.py
src/models/: __init__.py  index_file.py  job_request.py  pagination.py  search.py
src/routers/: __init__.py  files.py  index.py  search.py
src/routers/v1/: __init__.py  files.py  index.py  search.py
src/routers/v2/: __init__.py  collections.py  files.py  index.py  search.py
src/search/: searcher.py
src/utils/: __init__.py  file_abstraction.py  http.py  security.py  support.py  validation.py
src/vector_store/: qdrant_client.py
src/worker/: worker.py
src/worker/flows/: __init__.py  delete_file.py  index_file.py  utils.py
tests/: test_cache.py  test_chunker.py  test_embeddings.py  test_file_abstraction.py  test_file_type.py  test_minio_client.py  test_qdrant_client.py  test_redis_client.py  test_routers.py  test_routers_v2.py  test_search.py  test_security.py  test_tls.py  test_validation.py  test_worker_flows.py
