[project]
name = "semantic-file-search"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.0",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "testcontainers>=4.14.0",
]
security = [
    "safety>=3.7.0",
    "bandit>=1.9.2",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "testcontainers>=4.14.0",
    "safety>=3.7.0",
    "bandit>=1.9.2",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require Docker)",
]
