[project]
name = "semantic-file-search"
version = "1.0.0"
description = "API to search across files using the meaning"
requires-python = ">=3.13"
dependencies = [
    "arq>=0.26.3",
    "fastapi>=0.128.0",
    "filetype>=1.2.0",
    "minio>=7.2.20",
    "numpy>=2.4.0",
    "pypdf>=6.6.0",
    "qdrant-client>=1.16.2",
    "redis>=5.3.1",
    "sentence-transformers>=5.2.0",
    "slowapi>=0.1.9",
    "torch",
    "uvicorn>=0.40.0",
]

### remove to use gpu version
[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
index-strategy = "unsafe-best-match"
###

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "testcontainers>=4.14.0",
]
security = [
    "safety>=3.7.0",
    "bandit>=1.9.2",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "testcontainers>=4.14.0",
    "safety>=3.7.0",
    "bandit>=1.9.2",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require Docker)",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[dependency-groups]
dev = [
    "black>=26.1.0",
    "python-multipart>=0.0.21",
]
test = [
    "requests>=2.32.5",
]
